@@ -1,5 +1,6 @@
 @echo off
 REM
+REM  Copyright (c) 2024, 2025 Contributors to the Eclipse Foundation
 REM  Copyright (c) 2018 Oracle and/or its affiliates. All rights reserved.
 REM
 REM  This program and the accompanying materials are made available under the
@@ -65,18 +66,10 @@ rem issue the error so we don't have to do i18n of our own message from the scri
 goto :EOF
 
 :main
-set _AS_INSTALL=%~dp0..
-call "%_AS_INSTALL%\config\asenv.bat"
+set ARGS=%*
+set AS_INSTALL=%~dp0..
+call "%AS_INSTALL%\config\asenv.bat"
 call :chooseJava
 
-set inputArgs=%*
-rem
-rem Convert the java.exe path and the classpath path to
-rem Windows "short" versions - with no spaces - so the
-rem for /F statement below will work correctly.  Spaces cause
-rem it great troubles.
-rem
-for %%a in ("%JAVA%") do set ACCJava=%%~sa%
-for %%a in ("%_AS_INSTALL%/lib/gf-client.jar") do set XCLASSPATH=%%~sa
-for /F "usebackq tokens=*" %%a in (`%ACCJava% -classpath %XCLASSPATH% org.glassfish.appclient.client.CLIBootstrap`) do set javaCmd=%%a
-%javaCmd%
+FOR /F "delims=" %i IN ("%JAVA%" --module-path "%AS_INSTALL%\lib\bootstrap" --add-modules ALL-MODULE-PATH -classpath "%AS_INSTALL%\lib\gf-client.jar" org.glassfish.appclient.client.acc.agent.CLIBootstrap %*) DO set CMD=%i
+%CMD% %ARGS%
